--- a/css/app.css
+++ b/css/app.css
@@ -11,4 +11,10 @@ body {
   line-height: 56px;
 }
 
-
+#logo {
+  color: #ebebd3;
+  font-size: 20px;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-left: 25%;
+}
